# olio-ohjelmointi

./: .gitignore
kotitehtävät/h1/: main.cpp
kotitehtävät/h2/h2a/: car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
kotitehtävät/h2/h2b/: car.cpp  car.h  main.cpp
kotitehtävät/h3/h3a/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
kotitehtävät/h3/h3b/: animal.h  dog.h  main.cpp
kotitehtävät/h4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
kotitehtävät/h5/: classa1.cpp  classa1.h  classa2.cpp  classa2.h  classb.cpp  classb.h  main.cpp
kotitehtävät/h6/h6a/: CMakeLists.txt  main.cpp  myclass.cpp
kotitehtävät/h6/h6b/: exampleclass.cpp  exampleclass.h  main.cpp
viikkokokeet/: viikkokoe1.cpp  viikkokoe2.cpp  viikkokoe3.cpp  viikkokoe4.cpp  viikkokoe5.cpp
